Fixed button/archive contrast issue

--- a/src/main.scss
+++ b/src/main.scss
@@ -83,6 +83,14 @@
   }
 }
 
+#notes-column .note .note-flags .flag.warning,
+.notes .note .note-flags .flag.warning,
+.sn-component .sk-button.warning,
+.sn-component .sk-button.success,
+.sn-component .sk-button.danger {
+  color: var(--secondary-bg-color);
+}
+
 #select {
   margin: 5px;
   color: var(--sn-stylekit-foreground-color);
